--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,10 +1,12 @@
 .footer {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-top: auto;
   background: black;
   color: white;
   padding: 0.5rem 2rem 0.5rem 1rem;
+  width: 100%;
 }
 
 .logo {
@@ -18,10 +20,12 @@
 
 .footer ul {
   display: flex;
+  align-items: center;
   list-style: none;
-  align-items: end;
   gap: 1rem;
+  margin: 0;
 }
+
 
 .social-media-icons {
   font-size: 1.5rem;
