--- a/src/index.css
+++ b/src/index.css
@@ -5,46 +5,5 @@ body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  min-height: 100vh;
 }
 
-.course-card h3::after {
-  content: url("https://education-team-2020.s3.eu-west-1.amazonaws.com/web-dev/m3/icon-expand.png");
-  margin-left: 5px;
-}
-
-.EditProjectPage,
-.AddProject,
-.AddTask 
-{
-  background: #f9eec3;
-  border: 1px solid grey;
-  box-shadow: 0px 2px 3px grey;
-  width: 400px;
-  text-align: center;
-  margin: 0 auto;
-  margin-bottom: 20px;
-  padding: 10px;
-  border-radius: 4px;
-}
-
-.EditProjectPage {
-  background-color: rgb(239, 196, 88);
-}
-
-.EditProjectPage form,
-.AddTask form,
-.AddProject form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.AddTask button,
-.AddProject button {
-  display: block;
-}
-
-.TaskCard {
-  background-color: #dfeef9;
-}
