--- a/src/pages/YoutubeVideosPage.module.css
+++ b/src/pages/YoutubeVideosPage.module.css
@@ -18,6 +18,7 @@
 .card {
   align-items: center;
   justify-content: space-between;
+  text-align: center;
   background: #94a7c8;
   padding: 1rem 0;
 }
